tests/ui/for/iter_from_mac_call.stderr
error[E0277]: `dyn Iterator<Item = &'a mut u8>` is not an iterator
  --> $DIR/iter_from_mac_call.rs:6:17
   |
LL |     for item in deref!(iter) { *item = 0 }
   |                 ^^^^^^^^^^^^ the trait `IntoIterator` is not implemented for `dyn Iterator<Item = &'a mut u8>`
   |
   = note: the trait bound `dyn Iterator<Item = &'a mut u8>: IntoIterator` is not satisfied
   = note: required for `dyn Iterator<Item = &'a mut u8>` to implement `IntoIterator`
help: consider mutably borrowing here
   |
LL |     for item in &mut deref!(iter) { *item = 0 }
   |                 ++++

error[E0277]: `i32` is not an iterator
  --> $DIR/iter_from_mac_call.rs:11:18
   |
LL |     for _item in deref!(x) {}
   |                  ^^^^^^^^^ `i32` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `i32`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`
   = note: required for `i32` to implement `IntoIterator`

error[E0308]: mismatched types
  --> $DIR/iter_from_mac_call.rs:22:9
   |
LL |     for Wrapped(item) in borrow_deref!(iter) { *item = 0 }
   |         ^^^^^^^^^^^^^    ------------------- this is an iterator with items of type `&mut i32`
   |         |
   |         expected `i32`, found `Wrapped`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
